# docassemble-GenericAffidavit

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/GenericAffidavit/data/questions/: generic_affidavit.yml
docassemble/GenericAffidavit/data/templates/: generic_affidavit.docx  generic_affidavit_next_steps.docx
