[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.GenericAffidavit"
version = "1.0"
description = "Generic Affidavit"
readme = "README.md"
authors = [
    { name = "Barbara Siegel", email = "bsiegel7@gmail.com" },
]
dependencies = [
    "docassemble.ALAnyState @ git+https://github.com/SuffolkLITLab/docassemble-ALAnyState.git@main",
    "docassemble.ALMassachusetts>=0.1.2",
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://courtformsonline.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
